--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -10,80 +10,66 @@
         android:id="@+id/movie_image_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.4"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:src="@mipmap/san_dau_sinh_tu"/>
+        android:src="@mipmap/san_dau_sinh_tu"
+        android:scaleType="fitXY"/>
 
     <ImageView
-        android:id="@+id/film_detail_imageView"
-        android:layout_width="350dp"
-        android:layout_height="250dp"
+        android:id="@+id/back_btn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/baseline_arrow_back_24"
+        android:padding="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="250dp"
-        android:background="@color/design_default_color_surface"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp">
-    </ImageView>
-
-    <TextView android:id="@+id/text_view_ten_film"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/film_detail_imageView"
-        app:layout_constraintLeft_toLeftOf="@id/film_detail_imageView"
-        app:layout_constraintRight_toRightOf="@id/film_detail_imageView"
-        android:text="One Piece - Đảo Hải Tặc"
-        android:textSize="30dp"
-        android:layout_marginTop="-20dp"
-        android:textColor="@color/white"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
         />
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/linear_layout_ten_khac"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/movie_constraint_background"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@id/film_detail_imageView"
-        app:layout_constraintTop_toBottomOf="@id/text_view_ten_film"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp">
+        app:layout_constraintTop_toBottomOf="@id/movie_image_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="@drawable/while_background"
+        android:layout_marginTop="-15dp">
 
-        <TextView
+        <TextView android:id="@+id/text_view_ten_film"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:textSize="15sp"
-            android:textColor="#ccc"
-            android:text="Tên khác: "/>
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="@id/movie_constraint_background"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:text="One Piece - Đảo Hải Tặc"
+            android:textSize="20dp"
+            android:textColor="@color/black"/>
+
         <TextView
             android:id="@+id/ten_khac_text_view"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/text_view_ten_film"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:textSize="15sp"
-            android:textColor="#fff"
+            android:layout_marginLeft="15dp"
+            android:textColor="#000"
             android:text="Naruto: Sức Mạnh Vĩ Thú"/>
-    </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="@id/film_detail_imageView"
-        app:layout_constraintTop_toBottomOf="@id/linear_layout_ten_khac"
-        android:layout_marginLeft="20dp">
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textSize="15sp"
-            android:textColor="#ccc"
-            android:text="Thể loại: "/>
         <TextView
             android:id="@+id/text_view_the_loai"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/ten_khac_text_view"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:textSize="15sp"
+            android:layout_marginLeft="15dp"
             android:textColor="#F56415"
             android:text="Phiêu lưu"/>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
