--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -41,7 +41,7 @@
 
         <TextView android:id="@+id/text_view_ten_film"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_width="380dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toTopOf="@id/movie_constraint_background"
@@ -50,11 +50,21 @@
             android:textSize="20dp"
             android:textColor="@color/black"/>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/text_view_ten_film"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:textSize="15sp"
+            android:layout_marginLeft="15dp"
+            android:id="@+id/recyclerView_chu_de"
+            />
+
         <TextView
             android:id="@+id/ten_khac_text_view"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/text_view_ten_film"
+            app:layout_constraintTop_toBottomOf="@id/recyclerView_chu_de"
             app:layout_constraintLeft_toLeftOf="parent"
             android:textSize="15sp"
             android:layout_marginLeft="15dp"
