--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,86 +1,257 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".viewmodels.MovieDetail">
-
-    <ImageView
-        android:id="@+id/movie_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:src="@mipmap/san_dau_sinh_tu"
-        android:scaleType="fitXY"/>
-
-    <ImageView
-        android:id="@+id/back_btn"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/baseline_arrow_back_24"
-        android:padding="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        />
+    app:layout_editor_absoluteX="1dp"
+    app:layout_editor_absoluteY="1dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/movie_constraint_background"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/movie_image_view"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:background="@drawable/while_background"
-        android:layout_marginTop="-15dp">
+        android:layout_height="match_parent"
+        tools:context=".viewmodels.MovieDetail">
 
-        <TextView android:id="@+id/text_view_ten_film"
-            android:layout_height="wrap_content"
-            android:layout_width="380dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toTopOf="@id/movie_constraint_background"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:text="One Piece - Đảo Hải Tặc"
-            android:textSize="24dp"
-            android:textColor="@color/black"/>
-
-        <androidx.recyclerview.widget.RecyclerView
+        <ImageView
+            android:id="@+id/movie_image_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/text_view_ten_film"
+            android:layout_height="450dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:textSize="15sp"
-            android:layout_marginLeft="15dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:src="@mipmap/san_dau_sinh_tu"
+            android:scaleType="fitXY"/>
+
+        <ImageView
+            android:id="@+id/back_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:padding="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="10dp"
-            android:id="@+id/recyclerView_chu_de"
+            android:layout_marginLeft="5dp"
             />
 
-        <TextView
-            android:id="@+id/ten_khac_text_view"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/movie_constraint_background"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/recyclerView_chu_de"
+            app:layout_constraintTop_toBottomOf="@id/movie_image_view"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:textSize="15sp"
-            android:layout_marginLeft="15dp"
-            android:textColor="#000"
-            android:text="Naruto: Sức Mạnh Vĩ Thú"/>
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="@drawable/while_background"
+            android:layout_marginTop="-15dp">
 
-        <TextView
-            android:id="@+id/text_view_the_loai"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/ten_khac_text_view"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textSize="15sp"
-            android:layout_marginLeft="15dp"
-            android:textColor="#F56415"
-            android:text="Phiêu lưu"/>
+            <TextView android:id="@+id/text_view_ten_film"
+                android:layout_height="wrap_content"
+                android:layout_width="380dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toTopOf="@id/movie_constraint_background"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:text="One Piece - Đảo Hải Tặc"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/text_view_ten_film"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:textSize="15sp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:id="@+id/recyclerView_chu_de"
+                />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/linear_film_detail_wrapper"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/recyclerView_chu_de"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="3dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tình trạng: "
+                        android:textColor="@color/black"
+                        android:layout_marginRight="5dp"
+                        android:textSize="15sp"/>
+                    <TextView
+                        android:id="@+id/text_view_status"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="Đã phát hành"
+                        android:textColor="#51af4f"
+                        android:textSize="15sp"/>
+                </androidx.appcompat.widget.LinearLayoutCompat>
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="3dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Thời lượng: "
+                        android:textColor="@color/black"
+                        android:layout_marginRight="5dp"
+                        android:textSize="15sp"/>
+                    <TextView
+                        android:id="@+id/text_view_duriation"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="102 phút"
+                        android:textColor="#51af4f"
+                        android:textSize="15sp"/>
+                </androidx.appcompat.widget.LinearLayoutCompat>
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="3dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Ngày phát hành: "
+                        android:textColor="@color/black"
+                        android:layout_marginRight="5dp"
+                        android:textSize="15sp"/>
+                    <TextView
+                        android:id="@+id/text_view_release_date"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="2023-20-25"
+                        android:textColor="#51af4f"
+                        android:textSize="15sp"/>
+                </androidx.appcompat.widget.LinearLayoutCompat>
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="3dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Kinh phí: "
+                        android:textColor="@color/black"
+                        android:layout_marginRight="5dp"
+                        android:textSize="15sp"/>
+                    <TextView
+                        android:id="@+id/text_view_budget"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="20000$"
+                        android:textColor="#51af4f"
+                        android:textSize="15sp"/>
+                </androidx.appcompat.widget.LinearLayoutCompat>
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Doanh thu: "
+                        android:textColor="@color/black"
+                        android:layout_marginRight="5dp"
+                        android:textSize="15sp"/>
+                    <TextView
+                        android:id="@+id/text_view_income"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="200000$"
+                        android:textColor="#51af4f"
+                        android:textSize="15sp"/>
+                </androidx.appcompat.widget.LinearLayoutCompat>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/linear_film_overview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/linear_film_detail_wrapper"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Tóm tắt"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_view_overview"
+                    android:textColor="#C0C0C0"
+                    android:gravity="center"
+                    android:textSize="15sp"/>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                app:layout_constraintTop_toBottomOf="@id/linear_film_overview"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:id="@+id/linear_film_images">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hình ảnh"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/recycler_view_film_image"/>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.appcompat.widget.LinearLayoutCompat
+                app:layout_constraintTop_toBottomOf="@id/linear_film_images"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Diễn viên"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/recycler_cast_list"/>
+            </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
