--- a/app/src/main/res/layout/list_chu_de.xml
+++ b/app/src/main/res/layout/list_chu_de.xml
@@ -8,6 +8,7 @@
 
     <Button
         android:text="button"
+        android:textSize="12sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/chu_de_btn"
