--- a/app/src/main/res/layout/cast_image_item.xml
+++ b/app/src/main/res/layout/cast_image_item.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="150dp"
-    android:layout_height="100dp"
+    android:layout_width="80dp"
+    android:layout_height="120dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
-    app:cardElevation="0dp">
+    app:cardElevation="0dp"
+    android:layout_marginRight="5dp">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/image_view_film_image"
+        android:id="@+id/image_view_cast_image"
         android:adjustViewBounds="true"/>
 </androidx.cardview.widget.CardView>
