--- a/app/src/main/res/layout/movie_in_list.xml
+++ b/app/src/main/res/layout/movie_in_list.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="5dp"
     android:orientation="vertical"
-    android:layout_marginRight="5dp">
+    android:layout_marginRight="10dp"
+    android:id="@+id/item_movie">
 
     <androidx.cardview.widget.CardView
         android:layout_width="160dp"
@@ -18,6 +19,7 @@
             android:layout_height="200dp"
             android:id="@+id/image_view_poster"
             android:background="@drawable/custome_image_view"
+            android:scaleType="fitXY"
             />
     </androidx.cardview.widget.CardView>
 
