--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="260dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="5dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginRight="10dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="160dp"
