--- a/app/src/main/res/layout/fragment_top_rated.xml
+++ b/app/src/main/res/layout/fragment_top_rated.xml
@@ -10,7 +10,7 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".viewmodels.PhimHotFragment"
+        tools:context=".viewmodels.TopRatedFragment"
         android:layout_marginTop="10dp">
 
         <androidx.recyclerview.widget.RecyclerView
