--- a/app/src/main/res/layout/movie_in_list.xml
+++ b/app/src/main/res/layout/movie_in_list.xml
@@ -29,5 +29,7 @@
         android:text="Đây là tên phim"
         android:id="@+id/text_view_ten_phim"
         android:gravity="center"
+        android:textSize="16sp"
+        android:textColor="#000"
         />
 </androidx.appcompat.widget.LinearLayoutCompat>
