--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -14,8 +14,8 @@
         app:cardElevation="0dp">
 
         <ImageView
-            android:layout_width="160dp"
-            android:layout_height="240dp"
+            android:layout_width="180dp"
+            android:layout_height="270dp"
             android:id="@+id/image_view_poster"
             android:background="@drawable/custome_image_view"
             />
@@ -26,5 +26,8 @@
         android:layout_height="wrap_content"
         android:text="Đây là tên phim"
         android:id="@+id/text_view_ten_phim"
+        android:textSize="16sp"
+        android:textColor="#000"
+        android:gravity="center"
         />
 </androidx.appcompat.widget.LinearLayoutCompat>
